[gd_scene load_steps=4 format=3 uid="uid://btjmu4m2e3tvk"]

[ext_resource type="Script" path="res://scripts/hearts_row.gd" id="1_72mq1"]
[ext_resource type="Texture2D" uid="uid://co37glttjmrhd" path="res://assets/ui/heart-empty.png" id="2_o0eck"]
[ext_resource type="Texture2D" uid="uid://dv032g532oo7s" path="res://assets/ui/heart-full.png" id="3_cj61m"]

[node name="HeartsRow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_72mq1")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 0
theme_override_constants/separation = 1

[node name="HeartEmpty" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_o0eck")

[node name="HeartFull" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_cj61m")
